--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-reanimated": "^2.0.0-alpha.8",
     "react-native-redash": "^15.11.1",
     "react-native-safe-area-context": "^3.1.8",
-    "react-native-screens": "^2.13.0"
+    "react-native-screens": "^2.13.0",
+    "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
